# tour-finder

./: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/: heartbeat
.github/workflows/: collect.yml  keepalive.yml
api/: index.py
docs/: joinup-api-recon.md  novatours-recon.md  operators-survey.md  waavo-recon.md
scripts/: backfill_links.py  migrate_sqlite_to_pg.py  register-scheduler.ps1  unregister-scheduler.ps1
src/tourfinder/: cli.py  db.py  fetcher.py  queries.py  reviews.py  subscriptions.py  webapp.py
src/tourfinder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tourfinder/sources/: joinup.py  reviews.py  waavo.py
templates/: index.html
