[project]
name = "tourfinder"
version = "0.1.0"
description = "Last-minute tour aggregator (Riga departures)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
